--- a/code/AndroidManifest.xml
+++ b/code/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:backupAgent="com.bj4.yhh.coachboard.Bj4BackupAgent"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:restoreAnyVersion="true"
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.backup.api_key"
