--- a/code/AndroidManifest.xml
+++ b/code/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name="com.bj4.yhh.coachboard.MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
