--- a/code/AndroidManifest.xml
+++ b/code/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bj4.yhh.coachboard.basketball"
-    android:versionCode="6"
-    android:versionName="1.5" >
+    android:versionCode="7"
+    android:versionName="1.6" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -38,15 +38,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.bj4.yhh.coachboard.SimpleDataWidget" >
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
 
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/simple_data_widget" />
-        </receiver>
+<!--         <receiver android:name="com.bj4.yhh.coachboard.SimpleDataWidget" > -->
+<!--             <intent-filter> -->
+<!--                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" /> -->
+<!--             </intent-filter> -->
+
+<!--             <meta-data -->
+<!--                 android:name="android.appwidget.provider" -->
+<!--                 android:resource="@xml/simple_data_widget" /> -->
+<!--         </receiver> -->
+
+<!--         <service -->
+<!--             android:name="com.bj4.yhh.coachboard.SimpleDataWidgetService" -->
+<!--             android:permission="android.permission.BIND_REMOTEVIEWS" /> -->
+
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
